--- a/asset/template/parking.html
+++ b/asset/template/parking.html
@@ -8,7 +8,7 @@
         <form>
             {{#parking.slots}}
 
-            <div class="parking__slot">
+            <div class="parking__slot j__parkingslot">
                 <input type="checkbox" name="parkingslots" id="parkingslots-{{id}}" value="{{id}}" data-name="{{name}}" data-price="{{price}}" data-currency="EUR"/>
                 <label for="parkingslots-{{id}}" >
                     <span class="parking__check"></span>
